<resources>
    <string name="app_name">Song</string>
    <string name="title">Song Title</string>
    <string name="sing">Singers</string>
    <string name="year">Year</string>
    <string name="star">Stars</string>
    <string name="songtitle">Enter song title here</string>
    <string name="singer">Enter singers' name here</string>
    <string name="yearrelease">Enter year of release here</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="insert">INSERT</string>
    <string name="showlist">SHOW LIST</string>
</resources>